agregado de boton whats app

--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
-
+  <link rel="stylesheet" href="assets/css/whatsapp.css">
 </head>
 
 <body>
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <a href="https://api.whatsapp.com/send?phone=5493471688801&text=&source=&data=&app_absent=" class="float" target="_blank">
+  <i class="fa fa-whatsapp my-float"></i>
+  </a>
   <!-- ======= Header ======= -->
   <header id="header" class="header-transparent">
     <div class="container">
@@ -66,24 +69,6 @@
               Somos una pareja, Nacho y Eve, del interior de Santa Fe. Desde hace 10 años nos dedicamos a esto, arrancamos en un garage con 7 metros de material un plotter de corte y una estampadora, nunca nos detuvimos. Hicimos cambios miles, marcas, proveedores, maquinas, locales pero siempre tuvimos una sola cosa en mente, lo mejor para el cliente!.. Errores? pf! miles, nos paso de todo, nos dimos y nos seguimos dando la cabeza conta la pared pero tratamos de solucionar los inconvenientes siempre de la mejor manera. Hoy nos ayuda Silvi que ya es parte de este equipo y tiene la camiseta puesta como nosotros!.
             </p>
 
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="fa fa-flag"></i></div>
-              <h4 class="title"><a href="">Misión</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
-            </div>
-
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="fa fa-flag"></i></div>
-              <h4 class="title"><a href="">Visión</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
-            </div>
-
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
-              <div class="icon"><i class="fa fa-flag"></i></div>
-              <h4 class="title"><a href="">Valores</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
-            </div>
-
           </div>
 
           <div class="col-lg-6 background order-lg-2 order-1" data-aos="fade-left" data-aos-delay="100"></div>
@@ -102,17 +87,17 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">10</span>
+            <span data-toggle="counter-up">11</span>
             <p>Años</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">3650</span>
+            <span data-toggle="counter-up">4015</span>
             <p>Días</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">87600</span>
+            <span data-toggle="counter-up">96360</span>
             <p>Horas</p>
           </div>
 
